2005-06-29  Dalibor Topic  <robilad@kaffe.org>

	* include/nets.h: Guarded include of config.h. Include netdb.h.
	Check for H_ERRNO_DECLARED rather than h_errno.

	* libraries/clib/native/Class.c: 
	(java_lang_class_VMClass_checkAccess) Fixed prototype.

	Build fixes for Cygwin.

2005-06-29  Dalibor Topic  <robilad@kaffe.org>

        * include/kaffe/trampoline.h: New file, with code shared
	by all trampoline implementations.

        * config/alpha/trampolines.S,
        config/arm/trampolines.S,
        config/i386/trampolines.S,
        config/m68k/trampolines.S,
        config/mips/trampolines.S,
        config/powerpc/trampolines.S,
        config/sh/trampolines.S,
        config/sparc/trampolines.S:
	Include kaffe/trampoline.h.

        * kaffe/kaffevm/jit3/Makefile.am,
        kaffe/kaffevm/jit/Makefile.am:
	(AM_CCASFLAGS) Added ENGINE_DEFS and include
	directory to includes.

2005-06-29  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/alpha/trampolines.S,
	config/arm/trampolines.S,
	config/i386/trampolines.S,
	config/m68k/trampolines.S,
	config/mips/trampolines.S,
	config/sh/trampolines.S,
	config/sparc/trampolines.S
	(C_FUNC_NAME): Fixed concatenation.

	Reported by Davanum Srinivas <dims@yahoo.com>,
	Dalibor Topic  <robilad@kaffe.org>

2005-06-28  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (DLOPEN_JAVA_LIBS): Removed libclasspath and 
	libfdlibm.

	* libraries/clib/classpath/Makefile.am,
	libraries/clib/fdlibm/Makefile.am,
	replace/Makefile.am:
	(AM_LDFLAGS) Removed -module. Build as convenience libraries.

2005-06-27  Ito Kazumitsu  <kaz@maczuka.gcd.org>

        * gnu/java/nio/charset/UnicodeLittle.java
	(newDecoder): Set the endianness to UTF_16Decoder.MAYBE_LITTLE_ENDIAN.

	* gnu/java/nio/charset/UTF_16Decoder.java
	(MAYBE_BIG_ENDIAN, MAYBE_LITTLE_ENDIAN): New constants.
	(decodeLoop): If the byte order is MAYBE_LITTLE_ENDIAN or
	MAYBE_BIG_ENDIAN, assume the default endianness to be little or
	big respectively.
