@@ -1,3 +1,8 @@
+2005-06-30  Dalibor Topic  <robilad@kaffe.org>
+
+        * kaffe/kaffevm/jit/Makefile.am:
+	(AM_CCASFLAGS) Fixed stupid typo due to lack of coffee.
+
 2005-06-29  Dalibor Topic  <robilad@kaffe.org>
 
 	* include/nets.h: Guarded include of config.h. Include netdb.h.
